--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <a id="info-viz-ii-2014" class="anchor" href="#info-viz-ii-2014" aria-hidden="true"><span class="octicon octicon-link"></span></a>
         <h3>Student Assignments</h3>
         <h4><strong>Assignment 1:</strong> Physical Visualisation of data</h4>
-        <p>The Assignment was to visualise any kind of data in 3 dimensioanl space which cannot be represented in 2D space.</p>
+        <p>The Assignment was to visualise any kind of data in 3 dimensional space which cannot be represented in 2D space.</p>
         <ul>
         <li><a href="files/Assignment 1/Akshay and Pankaj/Visualizing rain intensity in Mumbai/Visualizing Rain intensity_Mumbai.pdf">Visualising rain intensity in Mumbai</a> <em>by Akshay and Pankaj</em>
         <li><a href="files/Assignment 1/Ameya and Sagar/Tea vs coffee at IDC,IITB/Data Visualisation_Poster.pdf">Visualising Tea and Coffee consumption in a day at IDC canteen</a> <em>by Ameya and Sagar</em>
