--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
         <p>The Assignment was to visualise any kind of data in 3 dimensioanl space which cannot be represented in 2D space.</p>
         <ul>
         <li><a href="Assignment 1/Akshay and Pankaj/Visualizing rain intensity in Mumbai/Visualizing Rain intensity_Mumbai.pdf">Visualising rain intensity in Mumbai</a> <em>by Akshay and Pankaj</em>
-        <li><a href="files/Assignment 1/Ameya and Sagar/Tea vs coffee at IDC,IITB/Data Visualisation_Poster.pdf">Visualising Tea and Coffee consumption in a day at IDC canteen</a> <em>by Ameya and Sagar</em>
-        <li><a href="files/Assignment 1/Dileep and Neilmani/Air quality of metro cities in India/physical data visualization.pdf">Visualising quality of air of metro cities in India</a> <em>by Dileep and Neilmani</em>
-        <li><a href="files/Assignment 1/Karan and Jayati/Number of calls incurred in a day/3d-visualization.pdf">Visualising number of calls incurred in a day</a> <em>by Jayati and Karan</em>
-        <li><a href="files/Assignment 1/Naveen and Ravi/3D visualization of Dharma's activities/Project Dharma.pdf">Visualising Dharma's activities</a> <em>by Naveen and Ravi</em>
-        <li><a href="files/Assignment 1/Nitin and Labeeba/Walk for water/1 _ Physical Data Visualization _ S Nitin, Labeeba _ 146250003.pdf">Walk for water</a> <em>by Nitin and Labeeba</em>
-        <li><a href="files/Assignment 1/Prasad and Indrajeet/Caffiene content in coffee/Poster for caffine content in coffee.pdf">Caffiene content in coffee</a> <em>by Prasad and Indrajeet</em>
-        <li><a href="files/Assignment 1/Sandeep and Rohan/Best Bus service routes and frequency from IITB main gate/Information Design - Rohan And Sandeep.jpg">Best Bus service routes and frequency from IITB main gate</a> <em>by Rohan and Sandeep</em>
-        <li><a href="files/Assignment 1/Shreshta and Dani/Guide to energy saving light bulb/Shreshta _ Danny_146250010_3D visualization poster.pdf">Guide to energy saving light bulb</a> <em>by Shreshta and Dani</em>
-        <li><a href="files/Assignment 1/Sitara and Rucha/Background of students at IDC since last 11years/poster.pdf">Background of students at IDC since last 11years</a> <em>by Sitara and Rucha</em>
+        <li><a href="Assignment 1/Ameya and Sagar/Tea vs coffee at IDC,IITB/Data Visualisation_Poster.pdf">Visualising Tea and Coffee consumption in a day at IDC canteen</a> <em>by Ameya and Sagar</em>
+        <li><a href="Assignment 1/Dileep and Neilmani/Air quality of metro cities in India/physical data visualization.pdf">Visualising quality of air of metro cities in India</a> <em>by Dileep and Neilmani</em>
+        <li><a href="Assignment 1/Karan and Jayati/Number of calls incurred in a day/3d-visualization.pdf">Visualising number of calls incurred in a day</a> <em>by Jayati and Karan</em>
+        <li><a href="Assignment 1/Naveen and Ravi/3D visualization of Dharma's activities/Project Dharma.pdf">Visualising Dharma's activities</a> <em>by Naveen and Ravi</em>
+        <li><a href="Assignment 1/Nitin and Labeeba/Walk for water/1 _ Physical Data Visualization _ S Nitin, Labeeba _ 146250003.pdf">Walk for water</a> <em>by Nitin and Labeeba</em>
+        <li><a href="Assignment 1/Prasad and Indrajeet/Caffiene content in coffee/Poster for caffine content in coffee.pdf">Caffiene content in coffee</a> <em>by Prasad and Indrajeet</em>
+        <li><a href="Assignment 1/Sandeep and Rohan/Best Bus service routes and frequency from IITB main gate/Information Design - Rohan And Sandeep.jpg">Best Bus service routes and frequency from IITB main gate</a> <em>by Rohan and Sandeep</em>
+        <li><a href="Assignment 1/Shreshta and Dani/Guide to energy saving light bulb/Shreshta _ Danny_146250010_3D visualization poster.pdf">Guide to energy saving light bulb</a> <em>by Shreshta and Dani</em>
+        <li><a href="Assignment 1/Sitara and Rucha/Background of students at IDC since last 11years/poster.pdf">Background of students at IDC since last 11years</a> <em>by Sitara and Rucha</em>
         
         </ul>
 
