--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
         <p>The Assignment was to visualise any kind of data in 3 dimensioanl space which cannot be represented in 2D space.</p>
         <ul>
         <li><a href="info-design-lab/IDC-VDIS/Assignment 1/Akshay and Pankaj/Visualizing rain intensity in Mumbai/Visualizing Rain intensity_Mumbai.pdf">Visualising rain intensity in Mumbai</a> <em>by Akshay and Pankaj</em>
-        <li><a href="Assignment 1/Ameya and Sagar/Tea vs coffee at IDC,IITB/Data Visualisation_Poster.pdf">Visualising Tea and Coffee consumption in a day at IDC canteen</a> <em>by Ameya and Sagar</em>
-        <li><a href="Assignment 1/Dileep and Neilmani/Air quality of metro cities in India/physical data visualization.pdf">Visualising quality of air of metro cities in India</a> <em>by Dileep and Neilmani</em>
-        <li><a href="Assignment 1/Karan and Jayati/Number of calls incurred in a day/3d-visualization.pdf">Visualising number of calls incurred in a day</a> <em>by Jayati and Karan</em>
-        <li><a href="Assignment 1/Naveen and Ravi/3D visualization of Dharma's activities/Project Dharma.pdf">Visualising Dharma's activities</a> <em>by Naveen and Ravi</em>
-        <li><a href="Assignment 1/Nitin and Labeeba/Walk for water/1 _ Physical Data Visualization _ S Nitin, Labeeba _ 146250003.pdf">Walk for water</a> <em>by Nitin and Labeeba</em>
-        <li><a href="Assignment 1/Prasad and Indrajeet/Caffiene content in coffee/Poster for caffine content in coffee.pdf">Caffiene content in coffee</a> <em>by Prasad and Indrajeet</em>
-        <li><a href="Assignment 1/Sandeep and Rohan/Best Bus service routes and frequency from IITB main gate/Information Design - Rohan And Sandeep.jpg">Best Bus service routes and frequency from IITB main gate</a> <em>by Rohan and Sandeep</em>
-        <li><a href="Assignment 1/Shreshta and Dani/Guide to energy saving light bulb/Shreshta _ Danny_146250010_3D visualization poster.pdf">Guide to energy saving light bulb</a> <em>by Shreshta and Dani</em>
-        <li><a href="Assignment 1/Sitara and Rucha/Background of students at IDC since last 11years/poster.pdf">Background of students at IDC since last 11years</a> <em>by Sitara and Rucha</em>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 1/Ameya and Sagar/Tea vs coffee at IDC,IITB/Data Visualisation_Poster.pdf">Visualising Tea and Coffee consumption in a day at IDC canteen</a> <em>by Ameya and Sagar</em>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 1/Dileep and Neilmani/Air quality of metro cities in India/physical data visualization.pdf">Visualising quality of air of metro cities in India</a> <em>by Dileep and Neilmani</em>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 1/Karan and Jayati/Number of calls incurred in a day/3d-visualization.pdf">Visualising number of calls incurred in a day</a> <em>by Jayati and Karan</em>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 1/Naveen and Ravi/3D visualization of Dharma's activities/Project Dharma.pdf">Visualising Dharma's activities</a> <em>by Naveen and Ravi</em>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 1/Nitin and Labeeba/Walk for water/1 _ Physical Data Visualization _ S Nitin, Labeeba _ 146250003.pdf">Walk for water</a> <em>by Nitin and Labeeba</em>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 1/Prasad and Indrajeet/Caffiene content in coffee/Poster for caffine content in coffee.pdf">Caffiene content in coffee</a> <em>by Prasad and Indrajeet</em>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 1/Sandeep and Rohan/Best Bus service routes and frequency from IITB main gate/Information Design - Rohan And Sandeep.jpg">Best Bus service routes and frequency from IITB main gate</a> <em>by Rohan and Sandeep</em>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 1/Shreshta and Dani/Guide to energy saving light bulb/Shreshta _ Danny_146250010_3D visualization poster.pdf">Guide to energy saving light bulb</a> <em>by Shreshta and Dani</em>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 1/Sitara and Rucha/Background of students at IDC since last 11years/poster.pdf">Background of students at IDC since last 11years</a> <em>by Sitara and Rucha</em>
         
         </ul>
 
@@ -64,52 +64,52 @@
         <h4><strong>Assignment 2:</strong> Creating Infographics from the data of General Elections 2014</h4>
         <p>300 parties, 8000 candidates, 800 Million voters, 1 Million booths served by 20 Million officials. I with variety of structured & unstructured information –party performances, candidate histories, crime records, declared assets and historical trends. Identify narratives/aspects/issues that you want to explore and highlight through visualization of data from the general elections 2014. Gather and analyse relevant data to identify a data set with the greatest potential for an unique, surprising or hitherto unavailable point of view. Parse, filter, represent and refine to create a static visualization.</p>
         <ul>
-        <li><a href="files/Assignment 2/Akshay_number of people who opted fo NOTA/Data visualization_NOTA.pdf">Number of people who opted fo NOTA</a><em> by Akshay</em></li>
-        <li><a href="files/Assignment 2/Ameya_The Black ink of democracy/GE2014_Ink_Infographic.pdf">The Black ink of democracy</a><em> by Ameya</em></li>
-        <li><a href="files/Assignment 2/Dani_Time for womens' reservation bill/Infographics.pdf">Time for womens' reservation bill</a><em> by Dani</em></li>
-        <li><a href="files/Assignment 2/Dileep_social media campaigns in general elections/Infographic.pdf">Social media campaigns in general elections</a><em> by Dileep</em></li>
-        <li><a href="files/Assignment 2/Indrajeet_elections in Guwahati/Infographic of ELECTIONS IN GHY-.pdf">Elections in Guwahati</a><em> by Indrajeet</em></li>
-        <li><a href="files/Assignment 2/Jayati_Expenditure during elections/infographics.pdf">Expenditure during General Elections 2014</a><em> by Jayati</em></li>
-        <li><a href="files/Assignment 2/Karan_How India's north east voted/How India's North East voted.pdf">How India's North East voted</a><em> by Karan </em></li>
-        <li><a href="files/Assignment 2/Labeeba_Role of model code of conduct teams/1.pdf">Role of model code of conduct teams</a><em> by Labeeba</em></li>
-        <li><a href="files/Assignment 2/Naveen_Uttarakhand general elections/InfographicUttarakhandElections.pdf">Uttarakhand general elections</a><em> by Naveen</em></li>
-        <li><a href="files/Assignment 2/Neilmani_Jharkhand on the mind/data visualization.pdf">Jharkhand on the mind</a><em> by Neilmani</em></li>
-        <li><a href="files/Assignment 2/Nitin_voters guide to elections/2 _ Election Infographic _ S Nitin _ 146250003.png">Voter's guide to elections</a><em> by Nitin</em></li>
-        <li><a href="files/Assignment 2/Pankaj_Election spend over years/Final poster.pdf">Election spend over years</a><em> by Pankaj</em></li>
-        <li><a href="files/Assignment 2/Prasad_Criminal records of MPs/VDIS Infographic.pdf">Criminal records of MPs</a><em> by Prasad</em></li>
-        <li><a href="files/Assignment 2/Ravi_Why can't one ignore UP in elections/Data Visualisation UP-01.jpg">Why can't one ignore UP in elections</a><em> by Ravi</em></li>
-        <li><a href="files/Assignment 2/Rohan_Voter turnout in India/Infographic_RohanVerma.pdf">Voter turnout in India</a><em> by Rohan</em></li>
-        <li><a href="files/Assignment 2/Rucha_Thane Parliamentary constituency in 2009 & 2014/2_Election infographic.jpg">Thane Parliamentary constituency in 2009 & 2014</a><em> by Rucha</em></li>
-        <li><a href="files/Assignment 2/Sagar_Gerontocracy in Democracy/infographics.pdf">Gerontocracy in Democracy</a><em> by Sagar</em></li>
-        <li><a href="files/Assignment 2/Sandeep_Popular names in elections/Election Visual2.pdf">Popular names in elections</a><em> by Sandeep</em></li>
-        <li><a href="files/Assignment 2/Shreshta_Death of secular democracy/Shreshta_1462250010_Indian Elections Infographic.pdf">Death of secular democracy</a><em> by Shreshta</em></li>
-        <li><a href="files/Assignment 2/SItara_criminal records of candidates/infographic.pdf">Criminal records of candidates</a><em> by Sitara</em></li>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 2/Akshay_number of people who opted fo NOTA/Data visualization_NOTA.pdf">Number of people who opted fo NOTA</a><em> by Akshay</em></li>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 2/Ameya_The Black ink of democracy/GE2014_Ink_Infographic.pdf">The Black ink of democracy</a><em> by Ameya</em></li>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 2/Dani_Time for womens' reservation bill/Infographics.pdf">Time for womens' reservation bill</a><em> by Dani</em></li>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 2/Dileep_social media campaigns in general elections/Infographic.pdf">Social media campaigns in general elections</a><em> by Dileep</em></li>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 2/Indrajeet_elections in Guwahati/Infographic of ELECTIONS IN GHY-.pdf">Elections in Guwahati</a><em> by Indrajeet</em></li>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 2/Jayati_Expenditure during elections/infographics.pdf">Expenditure during General Elections 2014</a><em> by Jayati</em></li>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 2/Karan_How India's north east voted/How India's North East voted.pdf">How India's North East voted</a><em> by Karan </em></li>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 2/Labeeba_Role of model code of conduct teams/1.pdf">Role of model code of conduct teams</a><em> by Labeeba</em></li>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 2/Naveen_Uttarakhand general elections/InfographicUttarakhandElections.pdf">Uttarakhand general elections</a><em> by Naveen</em></li>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 2/Neilmani_Jharkhand on the mind/data visualization.pdf">Jharkhand on the mind</a><em> by Neilmani</em></li>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 2/Nitin_voters guide to elections/2 _ Election Infographic _ S Nitin _ 146250003.png">Voter's guide to elections</a><em> by Nitin</em></li>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 2/Pankaj_Election spend over years/Final poster.pdf">Election spend over years</a><em> by Pankaj</em></li>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 2/Prasad_Criminal records of MPs/VDIS Infographic.pdf">Criminal records of MPs</a><em> by Prasad</em></li>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 2/Ravi_Why can't one ignore UP in elections/Data Visualisation UP-01.jpg">Why can't one ignore UP in elections</a><em> by Ravi</em></li>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 2/Rohan_Voter turnout in India/Infographic_RohanVerma.pdf">Voter turnout in India</a><em> by Rohan</em></li>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 2/Rucha_Thane Parliamentary constituency in 2009 & 2014/2_Election infographic.jpg">Thane Parliamentary constituency in 2009 & 2014</a><em> by Rucha</em></li>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 2/Sagar_Gerontocracy in Democracy/infographics.pdf">Gerontocracy in Democracy</a><em> by Sagar</em></li>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 2/Sandeep_Popular names in elections/Election Visual2.pdf">Popular names in elections</a><em> by Sandeep</em></li>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 2/Shreshta_Death of secular democracy/Shreshta_1462250010_Indian Elections Infographic.pdf">Death of secular democracy</a><em> by Shreshta</em></li>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 2/SItara_criminal records of candidates/infographic.pdf">Criminal records of candidates</a><em> by Sitara</em></li>
         </ul>
 
 
         <h4><strong>Assignment 3:</strong> 'Unhack' mobile app- Designing an android application for phone security</h4>
         <p>The assignment was designed to go through the entire process of mobile application development. The development process included designing information architecture, wireframing, low fidelity prototypes, high fidelity prototypes and the final application screens.</p>
         <ul>
-        <li><a href="files/Assignment 3/Akshay_UnHack.pdf">Design document by Akshay</a></li>
-        <li><a href="files/Assignment 3/UnHack.pdf">Design document by Ameya</a></li>
-        <li><a href="files/Assignment 3/Castle_rock.pdf">Design document by Dani</a></li>
-        <li><a href="files/Assignment 3/Unhack.pdf">Design document by Dileep</a></li>
-        <li><a href="files/Assignment 3/Unhac Document.pdf">Design document by Indrajeet</a></li>
-        <li><a href="files/Assignment 3/unHack.pdf">Design document by Jayati</a></li>
-        <li><a href="files/Assignment 3/UnhackDocumentation.pdf">Design document by Karan</a></li>
-        <li><a href="files/Assignment 3/unHACK booklet.pdf">Design document by Labeeba</a></li>
-        <li><a href="files/Assignment 3/UnhackConceptNaveenRawat_146330011.pdf">Design document by Naveen</a></em></li>
-        <li><a href="files/Assignment 3/unhack documentation.pdf">Design document by Neilmani</a></li>
-        <li><a href="files/Assignment 3/3 _ UnHack App Documentation _ S Nitin _ 146250003pdf.pdf">Design document by Nitin</a></li>
-        <li><a href="files/Assignment 3/Documentation unHACK.pdf">Design document by Pankaj</a></li>
-        <li><a href="files/Assignment 3/Final_document_VDIS.pdf">Design document by Prasad</a></li>
-        <li><a href="files/Assignment 3/Layout 02.pdf">Design document by Ravi</a></li>
-        <li><a href="files/Assignment 3/Unhack Redesign_Rohan Verma.pdf">Design document by Rohan</a></li>
-        <li><a href="files/Assignment 3/3_Unhack App.pdf">Design document by Rucha</a></em></li>
-        <li><a href="files/Assignment 3/app.pdf">Design document by Sagar</a></li>
-        <li><a href="files/Assignment 3/UnhackUI.pdf">Design document by Sandeep</a></li>
-        <li><a href="files/Assignment 3/Shreshta_146250010_Unhack Book.pdf">Design document by Shreshta</a></li>
-        <li><a href="files/Assignment 3/Flowchart + GUI .pdf">Design document by Sitara</a></li>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 3/Akshay_UnHack.pdf">Design document by Akshay</a></li>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 3/UnHack.pdf">Design document by Ameya</a></li>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 3/Castle_rock.pdf">Design document by Dani</a></li>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 3/Unhack.pdf">Design document by Dileep</a></li>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 3/Unhac Document.pdf">Design document by Indrajeet</a></li>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 3/unHack.pdf">Design document by Jayati</a></li>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 3/UnhackDocumentation.pdf">Design document by Karan</a></li>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 3/unHACK booklet.pdf">Design document by Labeeba</a></li>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 3/UnhackConceptNaveenRawat_146330011.pdf">Design document by Naveen</a></em></li>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 3/unhack documentation.pdf">Design document by Neilmani</a></li>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 3/3 _ UnHack App Documentation _ S Nitin _ 146250003pdf.pdf">Design document by Nitin</a></li>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 3/Documentation unHACK.pdf">Design document by Pankaj</a></li>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 3/Final_document_VDIS.pdf">Design document by Prasad</a></li>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 3/Layout 02.pdf">Design document by Ravi</a></li>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 3/Unhack Redesign_Rohan Verma.pdf">Design document by Rohan</a></li>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 3/3_Unhack App.pdf">Design document by Rucha</a></em></li>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 3/app.pdf">Design document by Sagar</a></li>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 3/UnhackUI.pdf">Design document by Sandeep</a></li>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 3/Shreshta_146250010_Unhack Book.pdf">Design document by Shreshta</a></li>
+        <li><a href="info-design-lab/IDC-VDIS/Assignment 3/Flowchart + GUI .pdf">Design document by Sitara</a></li>
         </ul>
 
 <!--    <a href="img/demopage/image-1.jpg" data-lightbox="roadtrip" data-title="My caption">Image #1</a>
