--- a/index.html
+++ b/index.html
@@ -64,26 +64,26 @@
         <h4><strong>Assignment 2:</strong> Creating Infographics from the data of General Elections 2014</h4>
         <p>300 parties, 8000 candidates, 800 Million voters, 1 Million booths served by 20 Million officials. I with variety of structured & unstructured information –party performances, candidate histories, crime records, declared assets and historical trends. Identify narratives/aspects/issues that you want to explore and highlight through visualization of data from the general elections 2014. Gather and analyse relevant data to identify a data set with the greatest potential for an unique, surprising or hitherto unavailable point of view. Parse, filter, represent and refine to create a static visualization.</p>
         <ul>
-        <li><a href="info-design-lab/IDC-VDIS/Assignment 2/Akshay_number of people who opted fo NOTA/Data visualization_NOTA.pdf">Number of people who opted fo NOTA</a><em> by Akshay</em></li>
-        <li><a href="info-design-lab/IDC-VDIS/Assignment 2/Ameya_The Black ink of democracy/GE2014_Ink_Infographic.pdf">The Black ink of democracy</a><em> by Ameya</em></li>
-        <li><a href="info-design-lab/IDC-VDIS/Assignment 2/Dani_Time for womens' reservation bill/Infographics.pdf">Time for womens' reservation bill</a><em> by Dani</em></li>
-        <li><a href="info-design-lab/IDC-VDIS/Assignment 2/Dileep_social media campaigns in general elections/Infographic.pdf">Social media campaigns in general elections</a><em> by Dileep</em></li>
-        <li><a href="info-design-lab/IDC-VDIS/Assignment 2/Indrajeet_elections in Guwahati/Infographic of ELECTIONS IN GHY-.pdf">Elections in Guwahati</a><em> by Indrajeet</em></li>
-        <li><a href="info-design-lab/IDC-VDIS/Assignment 2/Jayati_Expenditure during elections/infographics.pdf">Expenditure during General Elections 2014</a><em> by Jayati</em></li>
-        <li><a href="info-design-lab/IDC-VDIS/Assignment 2/Karan_How India's north east voted/How India's North East voted.pdf">How India's North East voted</a><em> by Karan </em></li>
-        <li><a href="info-design-lab/IDC-VDIS/Assignment 2/Labeeba_Role of model code of conduct teams/1.pdf">Role of model code of conduct teams</a><em> by Labeeba</em></li>
-        <li><a href="info-design-lab/IDC-VDIS/Assignment 2/Naveen_Uttarakhand general elections/InfographicUttarakhandElections.pdf">Uttarakhand general elections</a><em> by Naveen</em></li>
-        <li><a href="info-design-lab/IDC-VDIS/Assignment 2/Neilmani_Jharkhand on the mind/data visualization.pdf">Jharkhand on the mind</a><em> by Neilmani</em></li>
-        <li><a href="info-design-lab/IDC-VDIS/Assignment 2/Nitin_voters guide to elections/2 _ Election Infographic _ S Nitin _ 146250003.png">Voter's guide to elections</a><em> by Nitin</em></li>
-        <li><a href="info-design-lab/IDC-VDIS/Assignment 2/Pankaj_Election spend over years/Final poster.pdf">Election spend over years</a><em> by Pankaj</em></li>
-        <li><a href="info-design-lab/IDC-VDIS/Assignment 2/Prasad_Criminal records of MPs/VDIS Infographic.pdf">Criminal records of MPs</a><em> by Prasad</em></li>
-        <li><a href="info-design-lab/IDC-VDIS/Assignment 2/Ravi_Why can't one ignore UP in elections/Data Visualisation UP-01.jpg">Why can't one ignore UP in elections</a><em> by Ravi</em></li>
-        <li><a href="info-design-lab/IDC-VDIS/Assignment 2/Rohan_Voter turnout in India/Infographic_RohanVerma.pdf">Voter turnout in India</a><em> by Rohan</em></li>
-        <li><a href="info-design-lab/IDC-VDIS/Assignment 2/Rucha_Thane Parliamentary constituency in 2009 & 2014/2_Election infographic.jpg">Thane Parliamentary constituency in 2009 & 2014</a><em> by Rucha</em></li>
-        <li><a href="info-design-lab/IDC-VDIS/Assignment 2/Sagar_Gerontocracy in Democracy/infographics.pdf">Gerontocracy in Democracy</a><em> by Sagar</em></li>
-        <li><a href="info-design-lab/IDC-VDIS/Assignment 2/Sandeep_Popular names in elections/Election Visual2.pdf">Popular names in elections</a><em> by Sandeep</em></li>
-        <li><a href="info-design-lab/IDC-VDIS/Assignment 2/Shreshta_Death of secular democracy/Shreshta_1462250010_Indian Elections Infographic.pdf">Death of secular democracy</a><em> by Shreshta</em></li>
-        <li><a href="info-design-lab/IDC-VDIS/Assignment 2/SItara_criminal records of candidates/infographic.pdf">Criminal records of candidates</a><em> by Sitara</em></li>
+        <li><a href="Assignment 2/Akshay_number of people who opted fo NOTA/Data visualization_NOTA.pdf">Number of people who opted fo NOTA</a><em> by Akshay</em></li>
+        <li><a href="Assignment 2/Ameya_The Black ink of democracy/GE2014_Ink_Infographic.pdf">The Black ink of democracy</a><em> by Ameya</em></li>
+        <li><a href="Assignment 2/Dani_Time for womens' reservation bill/Infographics.pdf">Time for womens' reservation bill</a><em> by Dani</em></li>
+        <li><a href="Assignment 2/Dileep_social media campaigns in general elections/Infographic.pdf">Social media campaigns in general elections</a><em> by Dileep</em></li>
+        <li><a href="Assignment 2/Indrajeet_elections in Guwahati/Infographic of ELECTIONS IN GHY-.pdf">Elections in Guwahati</a><em> by Indrajeet</em></li>
+        <li><a href="Assignment 2/Jayati_Expenditure during elections/infographics.pdf">Expenditure during General Elections 2014</a><em> by Jayati</em></li>
+        <li><a href="Assignment 2/Karan_How India's north east voted/How India's North East voted.pdf">How India's North East voted</a><em> by Karan </em></li>
+        <li><a href="Assignment 2/Labeeba_Role of model code of conduct teams/1.pdf">Role of model code of conduct teams</a><em> by Labeeba</em></li>
+        <li><a href="Assignment 2/Naveen_Uttarakhand general elections/InfographicUttarakhandElections.pdf">Uttarakhand general elections</a><em> by Naveen</em></li>
+        <li><a href="Assignment 2/Neilmani_Jharkhand on the mind/data visualization.pdf">Jharkhand on the mind</a><em> by Neilmani</em></li>
+        <li><a href="Assignment 2/Nitin_voters guide to elections/2 _ Election Infographic _ S Nitin _ 146250003.png">Voter's guide to elections</a><em> by Nitin</em></li>
+        <li><a href="Assignment 2/Pankaj_Election spend over years/Final poster.pdf">Election spend over years</a><em> by Pankaj</em></li>
+        <li><a href="Assignment 2/Prasad_Criminal records of MPs/VDIS Infographic.pdf">Criminal records of MPs</a><em> by Prasad</em></li>
+        <li><a href="Assignment 2/Ravi_Why can't one ignore UP in elections/Data Visualisation UP-01.jpg">Why can't one ignore UP in elections</a><em> by Ravi</em></li>
+        <li><a href="Assignment 2/Rohan_Voter turnout in India/Infographic_RohanVerma.pdf">Voter turnout in India</a><em> by Rohan</em></li>
+        <li><a href="Assignment 2/Rucha_Thane Parliamentary constituency in 2009 & 2014/2_Election infographic.jpg">Thane Parliamentary constituency in 2009 & 2014</a><em> by Rucha</em></li>
+        <li><a href="Assignment 2/Sagar_Gerontocracy in Democracy/infographics.pdf">Gerontocracy in Democracy</a><em> by Sagar</em></li>
+        <li><a href="Assignment 2/Sandeep_Popular names in elections/Election Visual2.pdf">Popular names in elections</a><em> by Sandeep</em></li>
+        <li><a href="Assignment 2/Shreshta_Death of secular democracy/Shreshta_1462250010_Indian Elections Infographic.pdf">Death of secular democracy</a><em> by Shreshta</em></li>
+        <li><a href="Assignment 2/SItara_criminal records of candidates/infographic.pdf">Criminal records of candidates</a><em> by Sitara</em></li>
         </ul>
 
 
