--- a/index.html
+++ b/index.html
@@ -90,26 +90,26 @@
         <h4><strong>Assignment 3:</strong> 'Unhack' mobile app- Designing an android application for phone security</h4>
         <p>The assignment was designed to go through the entire process of mobile application development. The development process included designing information architecture, wireframing, low fidelity prototypes, high fidelity prototypes and the final application screens.</p>
         <ul>
-        <li><a href="Assignment 3/Akshay_UnHack.pdf">Design document by Akshay</a></li>
-        <li><a href="Assignment 3/UnHack.pdf">Design document by Ameya</a></li>
-        <li><a href="Assignment 3/Castle_rock.pdf">Design document by Dani</a></li>
-        <li><a href="Assignment 3/Unhack.pdf">Design document by Dileep</a></li>
-        <li><a href="Assignment 3/Unhac Document.pdf">Design document by Indrajeet</a></li>
-        <li><a href="Assignment 3/unHack.pdf">Design document by Jayati</a></li>
-        <li><a href="Assignment 3/UnhackDocumentation.pdf">Design document by Karan</a></li>
-        <li><a href="Assignment 3/unHACK booklet.pdf">Design document by Labeeba</a></li>
-        <li><a href="Assignment 3/UnhackConceptNaveenRawat_146330011.pdf">Design document by Naveen</a></em></li>
-        <li><a href="Assignment 3/unhack documentation.pdf">Design document by Neilmani</a></li>
-        <li><a href="Assignment 3/3 _ UnHack App Documentation _ S Nitin _ 146250003pdf.pdf">Design document by Nitin</a></li>
-        <li><a href="Assignment 3/Documentation unHACK.pdf">Design document by Pankaj</a></li>
-        <li><a href="Assignment 3/Final_document_VDIS.pdf">Design document by Prasad</a></li>
-        <li><a href="Assignment 3/Layout 02.pdf">Design document by Ravi</a></li>
-        <li><a href="Assignment 3/Unhack Redesign_Rohan Verma.pdf">Design document by Rohan</a></li>
-        <li><a href="Assignment 3/3_Unhack App.pdf">Design document by Rucha</a></em></li>
-        <li><a href="Assignment 3/app.pdf">Design document by Sagar</a></li>
-        <li><a href="Assignment 3/UnhackUI.pdf">Design document by Sandeep</a></li>
-        <li><a href="Assignment 3/Shreshta_146250010_Unhack Book.pdf">Design document by Shreshta</a></li>
-        <li><a href="Assignment 3/Flowchart + GUI .pdf">Design document by Sitara</a></li>
+        <li><a href="Assignment 3/Akshay/Akshay_UnHack.pdf">Design document by Akshay</a></li>
+        <li><a href="Assignment 3/Ameya/UnHack.pdf">Design document by Ameya</a></li>
+        <li><a href="Assignment 3/Dani/Castle_rock.pdf">Design document by Dani</a></li>
+        <li><a href="Assignment 3/Dileep/Unhack.pdf">Design document by Dileep</a></li>
+        <li><a href="Assignment 3/Indrajeet/Unhac Document.pdf">Design document by Indrajeet</a></li>
+        <li><a href="Assignment 3/Jayati/unHack.pdf">Design document by Jayati</a></li>
+        <li><a href="Assignment 3/Karan/UnhackDocumentation.pdf">Design document by Karan</a></li>
+        <li><a href="Assignment 3/Labeeba/unHACK booklet.pdf">Design document by Labeeba</a></li>
+        <li><a href="Assignment 3/Naveen/UnhackConceptNaveenRawat_146330011.pdf">Design document by Naveen</a></em></li>
+        <li><a href="Assignment 3/Neilmani/unhack documentation.pdf">Design document by Neilmani</a></li>
+        <li><a href="Assignment 3/Nitin/3 _ UnHack App Documentation _ S Nitin _ 146250003pdf.pdf">Design document by Nitin</a></li>
+        <li><a href="Assignment 3/Pankaj/Documentation unHACK.pdf">Design document by Pankaj</a></li>
+        <li><a href="Assignment 3/Prasad/Final_document_VDIS.pdf">Design document by Prasad</a></li>
+        <li><a href="Assignment 3/Ravi/Layout 02.pdf">Design document by Ravi</a></li>
+        <li><a href="Assignment 3/Rohan/Unhack Redesign_Rohan Verma.pdf">Design document by Rohan</a></li>
+        <li><a href="Assignment 3/Rucha/3_Unhack App.pdf">Design document by Rucha</a></em></li>
+        <li><a href="Assignment 3/Sagar/app.pdf">Design document by Sagar</a></li>
+        <li><a href="Assignment 3/Sandeep/UnhackUI.pdf">Design document by Sandeep</a></li>
+        <li><a href="Assignment 3/Shreshta/Shreshta_146250010_Unhack Book.pdf">Design document by Shreshta</a></li>
+        <li><a href="Assignment 3/Sitara/Flowchart + GUI .pdf">Design document by Sitara</a></li>
         </ul>
 
 <!--    <a href="img/demopage/image-1.jpg" data-lightbox="roadtrip" data-title="My caption">Image #1</a>
