--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <p>The Assignment was to visualise any kind of data in 3 dimensional space which cannot be represented in 2D space.</p>
         <ul>
         <li><a href="Assignment 1/Akshay and Pankaj/Visualizing rain intensity in Mumbai/Visualizing Rain intensity_Mumbai.pdf">Visualising rain intensity in Mumbai</a> <em>by Akshay and Pankaj</em>
-        <li><a href="Assignment 1/Ameya and Sagar/Tea vs coffee at IDC,IITB/Data Visualisation_Poster.pdf">Visualising Tea and Coffee consumption in a day at IDC canteen</a> <em>by Ameya and Sagar</em>
+        <li><a href="Assignment 1/Ameya and sagar/Tea vs coffee at IDC,IITB/Data Visualisation_Poster.pdf">Visualising Tea and Coffee consumption in a day at IDC canteen</a> <em>by Ameya and Sagar</em>
         <li><a href="Assignment 1/Dileep and Neilmani/Air quality of metro cities in India/physical data visualization.pdf">Visualising quality of air of metro cities in India</a> <em>by Dileep and Neilmani</em>
         <li><a href="Assignment 1/Karan and Jayati/Number of calls incurred in a day/3d-visualization.pdf">Visualising number of calls incurred in a day</a> <em>by Jayati and Karan</em>
         <li><a href="Assignment 1/Naveen and Ravi/3D visualization of Dharma's activities/Project Dharma.pdf">Visualising Dharma's activities</a> <em>by Naveen and Ravi</em>
