--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <ul>
         <img src="photos/1 _ Physical Data Visualization _ S Nitin, Labeeba _ 146250003-page-001 (1).jpg" alt="Data Visualisation of Water" style="width:300px;height:375px">
         
+        <img src="photos/Information Design - Rohan And Sandeep.jpg" alt="Data Visualisation of Best Buses" style="width:444px;height:340px">
         
         <li><a href="Assignment 1/Akshay and Pankaj/Visualizing rain intensity in Mumbai/Visualizing Rain intensity_Mumbai.pdf">Visualising rain intensity in Mumbai</a> <em>by Akshay and Pankaj</em>
         <li><a href="Assignment 1/Ameya and sagar/Tea vs coffee at IDC,IITB/Data Visualisation_Poster.pdf">Visualising Tea and Coffee consumption in a day at IDC canteen</a> <em>by Ameya and Sagar</em>
