--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
         <ul>
         <img src="photos/1 _ Physical Data Visualization _ S Nitin, Labeeba _ 146250003-page-001 (1).jpg" alt="Data Visualisation of Water" style="width:20">
         
-        <img src="photos/Information Design - Rohan And Sandeep.jpg" alt="Data Visualisation of Best Buses" style="width:20">
+        <img src="photos/Information Design - Rohan And Sandeep.jpg" alt="Data Visualisation of Best Buses" style="width:5%">
         
-        <img src="photos/Visualizing Rain intensity_Mumbai-page-001.jpg" alt="Data Visualisation of Best Buses" style="width:5">
+        <img src="photos/Visualizing Rain intensity_Mumbai-page-001.jpg" alt="Data Visualisation of Best Buses" style="width:5%">
         <li><a href="Assignment 1/Akshay and Pankaj/Visualizing rain intensity in Mumbai/Visualizing Rain intensity_Mumbai.pdf">Visualising rain intensity in Mumbai</a> <em>by Akshay and Pankaj</em>
         <li><a href="Assignment 1/Ameya and sagar/Tea vs coffee at IDC,IITB/Data Visualisation_Poster.pdf">Visualising Tea and Coffee consumption in a day at IDC canteen</a> <em>by Ameya and Sagar</em>
         <li><a href="Assignment 1/Dileep and Neilmani/Air quality of metro cities in India/physical data visualization.pdf">Visualising quality of air of metro cities in India</a> <em>by Dileep and Neilmani</em>
