--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
         <h4><strong>Assignment 2:</strong> Creating Infographics from the data of General Elections 2014</h4>
         <p>300 parties, 8000 candidates, 800 Million voters, 1 Million booths served by 20 Million officials. I with variety of structured & unstructured information –party performances, candidate histories, crime records, declared assets and historical trends. Identify narratives/aspects/issues that you want to explore and highlight through visualization of data from the general elections 2014. Gather and analyse relevant data to identify a data set with the greatest potential for an unique, surprising or hitherto unavailable point of view. Parse, filter, represent and refine to create a static visualization.</p>
         <ul>
+        
+        <img src="photos/GE2014_Ink_Infographic-page-001.jpg" alt="Data Visualisation of Best Buses" style="width:30%">
+        <img src="photos/Infographic-page-001.jpg" alt="Data Visualisation of Best Buses" style="width:30%">
+        <img src="photos/Shreshta_1462250010_Indian Elections Infographic-page-001.jpg" alt="Data Visualisation of Best Buses" style="width:30%">
+        
         <li><a href="Assignment 2/Akshay_number of people who opted fo NOTA/Data visualization_NOTA.pdf">Number of people who opted fo NOTA</a><em> by Akshay</em></li>
         <li><a href="Assignment 2/Ameya_The Black ink of democracy/GE2014_Ink_Infographic.pdf">The Black ink of democracy</a><em> by Ameya</em></li>
         <li><a href="Assignment 2/Dani_Time for womens' reservation bill/Infographics.pdf">Time for womens' reservation bill</a><em> by Dani</em></li>
