--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         
         <li><a href="Assignment 3/Akshay/Akshay_UnHack.pdf">Design document by Akshay</a></li>
         <li><a href="Assignment 3/Ameya/UnHack.pdf">Design document by Ameya</a></li>
-        <li><a href="Assignment 3/Dani/Castle_rock.pdf">Design document by Dani</a></li><img src="photos/Infographic-page-001.jpg" alt="Data Visualisation of Best Buses" style="width:30%">
+        <li><a href="Assignment 3/Dani/Castle_rock.pdf">Design document by Dani</a></li>
         <li><a href="Assignment 3/Dileep/Unhack.pdf">Design document by Dileep</a></li>
         <li><a href="Assignment 3/Indrajeet/Unhac Document.pdf">Design document by Indrajeet</a></li>
         <li><a href="Assignment 3/Jayati/unHack.pdf">Design document by Jayati</a></li>
